@@ -50,8 +50,10 @@ module Padrino
       Padrino.set_encoding
       Padrino.set_load_paths(*load_paths) # We set the padrino load paths
       Padrino.logger # Initialize our logger
+      Padrino.require_dependencies("#{root}/config/database.rb") # Be sure to don't remove constants from dbs.
+      Padrino::Reloader::Stat.lock! # Now we can remove constant from here to down
       Padrino.before_load.each(&:call) # Run before hooks
-      Padrino.dependency_paths.each { |path| require_dependencies(path) }
+      Padrino.dependency_paths.each { |path| Padrino.require_dependencies(path) }
       Padrino.after_load.each(&:call) # Run after hooks
       Padrino::Reloader::Stat.run!
       Thread.current[:padrino_loaded] = true
