@@ -26,8 +26,19 @@ module ObjectSpace
   class << self
     # Returns all the classes in the object space.
     def classes
-      klasses = []
-      ObjectSpace.each_object(Class)  { |o| klasses << o }
+      klasses = ObjectSpace.each_object(Class).map
+      klasses.reject! { |klass| klass.to_s.blank? } # Remove some wrong constants
+      # If you use remove_const they will not be removed from the ObjectSpace. That's odd
+      klasses.reject! do |klass|
+        begin
+          parts  = klass.to_s.split("::")
+          base   = parts.size == 1 ? Object : Object.full_const_get(parts[0..-2].join("::"))
+          object = parts[-1].to_s
+          !base.const_defined?(object)
+        rescue NameError
+          true
+        end
+      end
       klasses
     end
   end
